[gd_scene load_steps=8 format=3 uid="uid://dm1x0dfjfphrf"]

[ext_resource type="Script" path="res://scripts/turret.gd" id="1_u0toy"]
[ext_resource type="Texture2D" uid="uid://bpx0fhbvb5oi7" path="res://images/turret.png" id="2_pqbb5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4dgdh"]
atlas = ExtResource("2_pqbb5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ugfj"]
atlas = ExtResource("2_pqbb5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nwdru"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dgdh")
}],
"loop": true,
"name": &"correct",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ugfj")
}],
"loop": true,
"name": &"virus",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hyo5q"]
radius = 7.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f4ajl"]
radius = 5.0
height = 24.0

[node name="Turret" type="StaticBody2D"]
collision_layer = 4
script = ExtResource("1_u0toy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_nwdru")
animation = &"virus"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_hyo5q")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(8, -15)

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_f4ajl")

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
